--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@civic/auth": "^0.5.3",
     "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^6.4.6",
+    "@mui/styled-engine": "^7.1.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -67,7 +68,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
     "zod": "^3.23.8",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
